--- a/README.asciidoc
+++ b/README.asciidoc
@@ -220,7 +220,7 @@ For example, given the package `com.example.hello_clojure` and the activity
 `HelloActivity`, you would create the file
 `src/clojure/com/example/hello_clojure/HelloActivity.clj` as follows:
 
-[source,lisp]
+.HelloActivity.clj
 ----
 (ns com.example.hello_clojure.HelloActivity
   (:gen-class :main false
