--- a/README.asciidoc
+++ b/README.asciidoc
@@ -220,7 +220,8 @@ For example, given the package `com.example.hello_clojure` and the activity
 `HelloActivity`, you would create the file
 `src/clojure/com/example/hello_clojure/HelloActivity.clj` as follows:
 
-----
+++++
+<pre>
 (ns com.example.hello_clojure.HelloActivity
   (:gen-class :main false
               :extends android.app.Activity
@@ -232,7 +233,8 @@ For example, given the package `com.example.hello_clojure` and the activity
   (doto this
     (.superOnCreate bundle)
     (.setContentView R$layout/main)))
-----
+</pre>
+++++
 
 === 10. Build and run it ===
 
