--- a/README.asciidoc
+++ b/README.asciidoc
@@ -221,7 +221,11 @@ For example, given the package `com.example.hello_clojure` and the activity
 `src/clojure/com/example/hello_clojure/HelloActivity.clj` as follows:
 
 ++++
-<pre>
+<script src="https://gist.github.com/2361385.js?file=HelloActivity.clj"></script>
+++++
+
+[source,lisp]
+----
 (ns com.example.hello_clojure.HelloActivity
   (:gen-class :main false
               :extends android.app.Activity
@@ -233,8 +237,7 @@ For example, given the package `com.example.hello_clojure` and the activity
   (doto this
     (.superOnCreate bundle)
     (.setContentView R$layout/main)))
-</pre>
-++++
+----
 
 === 10. Build and run it ===
 
