--- a/README.asciidoc
+++ b/README.asciidoc
@@ -220,8 +220,9 @@ For example, given the package `com.example.hello_clojure` and the activity
 `HelloActivity`, you would create the file
 `src/clojure/com/example/hello_clojure/HelloActivity.clj` as follows:
 
-++++
-<pre>
+[source,lisp]
+.`HelloActivity.clj`
+----
 (ns com.example.hello_clojure.HelloActivity
   (:gen-class :main false
               :extends android.app.Activity
@@ -233,8 +234,9 @@ For example, given the package `com.example.hello_clojure` and the activity
   (doto this
     (.superOnCreate bundle)
     (.setContentView R$layout/main)))
-</pre>
-++++
+----
+
+As a gist: https://gist.github.com/2361385[]
 
 === 10. Build and run it ===
 
